# Ai-Content-Marketing-Crew

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml
content-marketing-suite/: app.py  cli.py  customization_guide.md  justfile
content-marketing-suite/agents/: __init__.py  researcher.py  seo_specialist.py  social_media_formatter.py  tasks.py  writer.py
content-marketing-suite/sample_outputs/: blog_example.md  linkedin_example.txt  twitter_example.txt
content-marketing-suite/tests/: __init__.py  test_engagement.py  test_plagiarism.py  test_seo.py
content-marketing-suite/utils/: __init__.py  calendar_export.py  engagement.py  plagiarism.py  seo.py
