[project]
name = "content-marketing-suite"
version = "1.0.0"
description = "AI-powered content marketing suite with Groq + Gemini"
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Content Marketing Suite" }]

dependencies = [
    "streamlit>=1.35.0",
    "groq>=0.9.0",
    "google-generativeai>=0.7.0",
    "spacy>=3.7.0",
    "yake>=0.4.8",
    "sentence-transformers>=2.2.0",
    "textblob>=0.17.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "ics>=0.7.2",
    "plotly>=5.24.0",
    "python-dateutil>=2.9.0",
    "rapidfuzz>=3.9.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
]

[project.scripts]
content-suite = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "utils"]

[tool.streamlit]
server.port = 8501
server.headless = true
browser.gatherUsageStats = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "pytest-mock>=3.14.0",
]
